--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,17 @@
 .vscode/
 
 # LaTeX
-.aux
-.bbl
-.blg
-.fdb_latexmk
-.toc
-.fls
-.log
-.out
-.pdf
-.pyc
-.synctex.gz
+*.aux
+*.bbl
+*.blg
+*.fdb_latexmk
+*.toc
+*.fls
+*.log
+*.out
+*.pdf
+*.pyc
+*.synctex.gz
 
 # MacOS
 __MACOSX
